src/objects/saInquiryDetail__c.object
<CustomObject>
    <fields>
        <fullName>AnswerType__c</fullName>
        <label>AnswerType</label>
        <picklist>
            <picklistValues>
                <fullName>TEXT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUMBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DECIMAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADIO_BUTTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHECKBOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERIOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LABEL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>必須項目</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShortReply__c</fullName>
        <formula>NOT( 
OR(
AND (TEXT(AnswerType__c) != &apos;CHECKBOX&apos;, TEXT(AnswerType__c) != &apos;RADIO_BUTTON&apos;), 
AND (NumberPossibleReplies__c &gt;= 1, LEN(Reply01Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 2, LEN(Reply02Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 3, LEN(Reply03Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 4, LEN(Reply04Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 5, LEN(Reply05Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 6, LEN(Reply06Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 7, LEN(Reply07Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 8, LEN(Reply08Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 9, LEN(Reply09Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 10, LEN(Reply10Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 11, LEN(Reply11Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 12, LEN(Reply12Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 13, LEN(Reply13Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 14, LEN(Reply14Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 15, LEN(Reply15Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 16, LEN(Reply16Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 17, LEN(Reply17Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 18, LEN(Reply18Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 19, LEN(Reply19Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 20, LEN(Reply20Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 21, LEN(Reply21Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 22, LEN(Reply22Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 23, LEN(Reply23Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 24, LEN(Reply24Label__c) &gt; 9),
AND (NumberPossibleReplies__c &gt;= 25, LEN(Reply25Label__c) &gt; 9)
)
)</formula>
        <label>IsShortReply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberPossibleReplies__c</fullName>
        <label>NumberPossibleReplies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionLabel__c</fullName>
        <label>QuestionLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply01Label__c</fullName>
        <label>Reply01Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply02Label__c</fullName>
        <label>Reply02Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply03Label__c</fullName>
        <label>Reply03Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>SortNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>saInquiry__c</fullName>
        <label>問い合わせ</label>
        <referenceTo>saInquiry__c</referenceTo>
        <relationshipLabel>問い合わせ詳細</relationshipLabel>
        <relationshipName>saInquiryDetail_md</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>問い合わせ詳細</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AnswerType__c</columns>
        <columns>saInquiry__c</columns>
        <columns>NumberPossibleReplies__c</columns>
        <columns>SortNo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INQD-{00000000}</displayFormat>
        <label>問い合わせ詳細 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>